refactor: Dto 수정